--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title> homem aranha em NY</title>
 </head>
 <body>
-  <h1> Soltando teia</h1>  
+  <h1> INDO À ESTÁTUA DA LIBERDADE</h1>  
   <img id="ha" src="download.jpeg">
   <img id="ny" src="download (3).jpeg">
-  <h3>vamos lá!!!!!</h3>
+  <img id="es" src="download (1).jpeg" >
+  <img id="ar" src="png-transparent-spider-web-spider-web-angle-white-happy-halloween-thumbnail.png"
+  <h3>MEUS AMIGOS CHEGARAM!</h3>
 </body>
 </html>
