--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title> homem aranha em NY</title>
+    <title> homem aranha em Nova iorque</title>
 </head>
 <body>
   <h1>INDO À ESTÁTUA DA LIBERDADE</h1>
   <img id="ha" src="download.jpeg" >
   <img id="ny" src="download (3).jpeg" >
   <img id="es" src="download (1).jpeg" >
-  <h1>MEUS AMIGOS CHEGARAM!</h1>
+  <h1>MEUS AMIGOS!</h1>
   
