--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <h1>MEUS AMIGOS!
     VAMOS PULAR NA ESTÁTUA DA LIBERDADE
   </h1>
-  <h2>CHEGAMOS NA ESTÁTUA!!1</h2>
+  <h2>CHEGAMOS NA ESTÁTUA!!</h2>
   
   
