--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <h1>INDO À ESTÁTUA DA LIBERDADE</h1>
+  <h2>chamei meus friends</h2>
   <img id="ha" src="download.jpeg" >
   <img id="ny" src="download (3).jpeg" >
   <img id="es" src="download (1).jpeg" >
