--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@
     VAMOS PULAR NA ESTÁTUA DA LIBERDADE
   </h1>
   <h2>CHEGAMOS NA ESTÁTUA!!</h2>
-  <img id="te" src="teio.avif" > <img id="te" src="teio.avif" > <img id="te" 
+  <img id="te" src="teio.avif" ><h2>JOGAMOS TEIAS!</h2> <img id="te" src="teio.avif" > <img id="te" 
   
