--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
   <h1>INDO À ESTÁTUA DA LIBERDADE</h1>
   <h2>chamei meus friends</h2>
-  <img id="ha" src="download.jpeg" >
-  <img id="ny" src="download (3).jpeg" >
+  <h2>CHEGAMOS NA ESTÁTUA!!</h2>
+  <h2>CHEGAMOS NA ESTÁTUA!!</h2>
   <img id="es" src="download (1).jpeg" >
   <h1>MEUS AMIGOS!
     VAMOS PULAR NA ESTÁTUA DA LIBERDADE
   </h1>
   <h2>CHEGAMOS NA ESTÁTUA!!</h2>
-  <img id="te" src="teio.avif"  <img id="te" src="teio.avif" > <img id="te" 
+  <img id="te" src="teio.avif" > <img id="te" src="teio.avif" > 
+  <h1>JOGAMOS TEIAS</h1>
+ 
   
-  <h2>JOGAMOS TEIAS</h2>
