--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   <h2>CHEGAMOS NA ESTÁTUA!!</h2>
   <h2>CHEGAMOS NA ESTÁTUA!!</h2>
   <img id="es" src="download (1).jpeg" >
+  <img id="ny" src="download.jpeg">
+  <img id="ha" src="download (3).jpeg"
   <h1>MEUS AMIGOS!
     VAMOS PULAR NA ESTÁTUA DA LIBERDADE
   </h1>
